--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <!-- jQuery Script -->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <!-- React-Materialize Script -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
     <title>React Memory Game: Starwars</title>
